expected/main/gens/primIncIx-neg-32.err
ERROR: "actual/main/gens/primIncIx-neg-32.lc", line 5
external incIx0  {primIncIx 0}  :: Ix 0  -> Maybe (Ix 0)
         ^
No generated implementation: parameter value 0 is too small; must be at least 1

ERROR: "actual/main/gens/primIncIx-neg-32.lc", line 6
external incIx2G {primIncIx 2G} :: Ix 2G -> Maybe (Ix 2G)
         ^
No generated implementation: parameter value 2147483648 is too large; must be at most 2147483647

ERROR: Aborting after 2 previously reported errors

